1998-11-30  Anthony Green  <green@cygnus.com>

	* index.html: Reformatted and updated to reflect hosting on
	sourceware.cygnus.com (new mailing lists, etc).

1998-11-29  Anthony Green  <green@cygnus.com>

	* index.html: Created (bootstrapped from old web pages).
